<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/folderSwitchLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/buttonLayout"
        app:layout_constraintTop_toBottomOf="@+id/buttonLayout"
        app:layout_constraintVertical_bias=".5">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context="com.mth.remoteApp.MainActivity2">

        <Button
            android:id="@+id/galleryBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="258dp"
            android:layout_marginLeft="258dp"
            android:layout_marginTop="12dp"
            android:onClick="switchToGallery"
            android:text="@string/gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/scanBtn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:onClick="scanDeviceBtnOnClick"
            android:text="Scan device"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Scan device" />

        <EditText
            android:id="@+id/editTextIPAddress"
            android:layout_width="187dp"
            android:layout_height="35dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="52dp"
            android:ems="8"
            android:hint="xxx.xxx.xxx.xxx"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textViewIPAddress"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewIPAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:layout_marginTop="60dp"
            android:text="@string/ip_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewServerPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="20dp"
            android:text="@string/port_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIPAddress" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewServerPort" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="178dp"
            android:layout_height="37dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="password123"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textViewPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextPort" />

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="8080"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textViewServerPort"
            app:layout_constraintTop_toBottomOf="@+id/editTextIPAddress" />

        <Button
            android:id="@+id/saveServerSettings"
            android:layout_width="75dp"
            android:layout_height="34dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="152dp"
            android:onClick="saveServerSettings"
            android:text="Save settings"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusTextGallery"
            android:layout_width="392dp"
            android:layout_height="14dp"
            android:text=" "
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>